--- a/apps/interview1/src/app/components/current-date-field/current-date-field.component.html
+++ b/apps/interview1/src/app/components/current-date-field/current-date-field.component.html
@@ -1,4 +1,4 @@
 <!-- <div class="currentdate" (click)="removeCount = false" *ngIf="removeCount">{{ label | countDown | async | date:'hh:mm:ss'}}</div> -->
-<div class="currentdate" (click)="close()">{{ label | countDown | async | date:'hh:mm:ss'}}</div>
+<div class="currentdate">{{ newCurrentTime | countDown | async | date:'hh:mm:ss'}}</div>
 
 
